--- a/app/views/tactics/show.html.erb
+++ b/app/views/tactics/show.html.erb
@@ -2,7 +2,7 @@
 <div class="container main_background padded_10" style="min-width: 1100px">
     <div class="flex minwidth">
         <div>
-            <iframe class="rounded_5" src="http://ptn.ninja" width="800" height="576"></iframe>
+            <iframe class="rounded_5" src="https://ptn.ninja" width="800" height="576"></iframe>
         </div>
         <div class="padded-sidebar container">
              <span class="flex padded-playinfo col-md-12 btn btn-success">
