--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,42 +6,41 @@
         Taktics
     </h1>
 
-    <div class="col-md-6 padded_bottom">
-        <div>
-            <h2 class="header_font_pink">What is Tak?</h2>
-            <div>
-                Tak is an Abstract Strategy game created by James Ernest and Patrick Rothfuss.
-                It is based off of a game of the same name in "The Wise Man's Fear"
-            </div>
-        </div>
-        <div>
-            <h2 class="header_font_pink">What is Tak?</h2>
-            <div>
-                Tak is an Abstract Strategy game created by James Ernest and Patrick Rothfuss.
-                It is based off of a game of the same name in "The Wise Man's Fear"
-            </div>
-        </div>
-        <div>
-            <h2 class="header_font_pink">What is Tak?</h2>
-            <div>
-                Tak is an Abstract Strategy game created by James Ernest and Patrick Rothfuss.
-                It is based off of a game of the same name in "The Wise Man's Fear"
-            </div>
-        </div>
-        <div>
-            <h2 class="header_font_pink">What is Tak?</h2>
-            <div>
-                Tak is an Abstract Strategy game created by James Ernest and Patrick Rothfuss.
-                It is based off of a game of the same name in "The Wise Man's Fear"
-            </div>
-        </div>
-    </div>
-
     <div class="center col-md-6 container padded-homescreen">
         <div>
-            <%= link_to "Click here to try a Taktic", "tactics/show", class: "btn btn-info btn-lg"%>
+            <%= link_to "Click here to try a Taktic", "tactics/show", class: "btn btn-info btn-lg bordered"%>
         </div>
     </div>
 
 
+    <div class="col-md-6 padded_bottom">
+        <div class="jumbotron">
+            <h2 class="header_font_pink">What is Tak?</h2>
+            <div>
+                Tak is an Abstract Strategy game created by James Ernest and Patrick Rothfuss.
+                It is based off of a game of the same name in "The Wise Man's Fear"
+            </div>
+        </div>
+        <div class="jumbotron">
+            <h2 class="header_font_pink">Why Practice Taktics?</h2>
+            <div>
+                Tak is an Abstract Strategy game created by James Ernest and Patrick Rothfuss.
+                It is based off of a game of the same name in "The Wise Man's Fear"
+            </div>
+        </div>
+        <div class="jumbotron">
+            <h2 class="header_font_pink">What is Tak?</h2>
+            <div>
+                Tak is an Abstract Strategy game created by James Ernest and Patrick Rothfuss.
+                It is based off of a game of the same name in "The Wise Man's Fear"
+            </div>
+        </div>
+        <div class="jumbotron">
+            <h2 class="header_font_pink">What is Tak?</h2>
+            <div>
+                Tak is an Abstract Strategy game created by James Ernest and Patrick Rothfuss.
+                It is based off of a game of the same name in "The Wise Man's Fear"
+            </div>
+        </div>
+    </div>
 </div>
