add tak homescreen

--- a/app/assets/stylesheets/static_pages/home.scss
+++ b/app/assets/stylesheets/static_pages/home.scss
@@ -17,11 +17,15 @@
 
 .jumbotron {
   border: 1px solid black;
+
+}
+
+.home_jumbo {
+  padding-top: 15px;
 }
 
 .header_font_pink {
   font-size: 30px !important;
-  padding: 10px;
   line-height: 75px ;
   text-align: center ;
   color: #d16370 !important;
