--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'Home') %>
 
 <div class="container main_background">
-    <h1 class="header_font">
+    <h1 class="header_font jumbotron">
         <%= image_tag("logo.png", :size => '48x48') %>
         Taktics
     </h1>
@@ -14,33 +14,22 @@
 
 
     <div class="col-md-6 padded_bottom">
-        <div class="jumbotron">
-            <h2 class="header_font_pink">What is Tak?</h2>
-            <div>
-                Tak is an Abstract Strategy game created by James Ernest and Patrick Rothfuss.
-                It is based off of a game of the same name in "The Wise Man's Fear"
-            </div>
-        </div>
-        <div class="jumbotron">
-            <h2 class="header_font_pink">Why Practice Taktics?</h2>
-            <div>
-                Tak is an Abstract Strategy game created by James Ernest and Patrick Rothfuss.
-                It is based off of a game of the same name in "The Wise Man's Fear"
-            </div>
-        </div>
-        <div class="jumbotron">
-            <h2 class="header_font_pink">What is Tak?</h2>
-            <div>
-                Tak is an Abstract Strategy game created by James Ernest and Patrick Rothfuss.
-                It is based off of a game of the same name in "The Wise Man's Fear"
-            </div>
-        </div>
-        <div class="jumbotron">
-            <h2 class="header_font_pink">What is Tak?</h2>
-            <div>
-                Tak is an Abstract Strategy game created by James Ernest and Patrick Rothfuss.
-                It is based off of a game of the same name in "The Wise Man's Fear"
-            </div>
+        <div class="jumbotron home_jumbo">
+            <h3 class="header_font_pink">What is Tak?</h3>
+            <ul>
+                <li>Tak is a strategy game created by James Ernest and Patrick Rothfuss.</li>
+                <li>It is based off of a game of the same name in The Wise Man's Fear. </li>
+                <li>The rules of Tak can be found <a href="http://www.cheapass.com/sites/default/files/TAKBetaRules9-9.pdf" target="_blank">here.</a></li>
+                <li>An example game can be found <a href="https://www.youtube.com/watch?v=iEXkpS-Q9dI">here.</a></li>
+            </ul>
+            <h3 class="header_font_pink">What are Tactics?</h3>
+            <ul>
+                <li>Tactics are self contained exercises used to help improve one's skill at a game. </li>
+                <li>They are often designed to illustrate an important concept. </li>
+                <li>Over time by practicing with tactics, players can gain pattern recognition skills that will help
+                improve their game. </li>
+            </ul>
+
         </div>
     </div>
 </div>
