update home button

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,7 +8,7 @@
 
     <div class="center col-md-6 container padded-homescreen">
         <div>
-            <%= link_to "Click here to try a Taktic", "tactics/show", class: "btn btn-info btn-lg bordered"%>
+            <%= link_to "Click here to try a Taktic", "tactics/show", class: "btn btn-info btn-lg bordered", style: "border: 1px solid black;"%>
         </div>
     </div>
 
