--- a/app/assets/stylesheets/tactics.scss
+++ b/app/assets/stylesheets/tactics.scss
@@ -1,7 +1,7 @@
 
 .main_background {
   border-radius: 10px;
-  background-image: url("pattern.svg");
+  background-image: url("/assets/pattern.svg");
 }
 
 .flex {
