--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -20,7 +20,7 @@
                 <li>Tak is a strategy game created by James Ernest and Patrick Rothfuss.</li>
                 <li>It is based off of a game of the same name in The Wise Man's Fear. </li>
                 <li>The rules of Tak can be found <a href="http://www.cheapass.com/sites/default/files/TAKBetaRules9-9.pdf" target="_blank">here.</a></li>
-                <li>An example game can be found <a href="https://www.youtube.com/watch?v=iEXkpS-Q9dI">here.</a></li>
+                <li>An example game can be found <a href="https://www.youtube.com/watch?v=iEXkpS-Q9dI" target="_blank">here.</a></li>
             </ul>
             <h3 class="header_font_pink">What are Tactics?</h3>
             <ul>
