fix safari graphical bugs

--- a/app/views/tactics/show.html.erb
+++ b/app/views/tactics/show.html.erb
@@ -4,8 +4,8 @@
         <div>
             <iframe class="rounded_5" src="https://ptn.ninja" width="800" height="576"></iframe>
         </div>
-        <div class="padded-sidebar container">
-             <span class="flex padded-playinfo col-md-12 btn btn-success">
+        <div class="padded-sidebar container col-md-3">
+            <span class="flex padded-playinfo col-md-12 btn btn-success">
                 It is your turn to play
             </span>
 
