--- a/app/views/tactics/show.html.erb
+++ b/app/views/tactics/show.html.erb
@@ -1,10 +1,10 @@
 
 <div class="container main_background padded_10" style="min-width: 1100px">
-    <div class="flex minwidth">
-        <div>
-            <iframe class="rounded_5" src="https://ptn.ninja" width="800" height="576"></iframe>
+    <div class="flex container minwidth">
+        <div class="col-md-9">
+            <iframe class="rounded_5" src="http://ptn.ninja/#NoZQlgLgpgBARABQDYEMCeAVFBrAdAYwHsBbOAXQChgBRANygDsJ4B5BpMB2ZdcqgERTR4AJgAMARgBsuMQHZcIkX2AYwxWHGkAuAMwTtAVgCcKnmigAnCfADiVy1GxnUFyyPjhixQgxUAlKABnAFckZjh-AFoxFXAAL00pPgoKCVwYFBsAMwkKEQyAE10YfF0KXSKAFlKqiiqiwxhCkQpDDKgSqFaZGGyPbPKFGCgbKDqADiKpZpEAagpjDIBhFtqAPjSxIvm+uol0mBFiuZH5tILZ0t1NiUqYXUKqqJGqgB40hpgqk6POj4k7RghieL2WKCkaV6-Q+QA" width="750" height="576"></iframe>
         </div>
-        <div class="padded-sidebar container col-md-3">
+        <div class="padded-sidebar center container col-md-4">
             <span class="flex padded-playinfo col-md-12 btn btn-success">
                 It is your turn to play
             </span>
