background not rendering?

--- a/app/assets/stylesheets/tactics.scss
+++ b/app/assets/stylesheets/tactics.scss
@@ -2,7 +2,7 @@
 .main_background {
   border-radius: 10px;
   background-color: white;
-  background-image: url("/assets/pattern.svg");
+  background-image: url("pattern.svg");
 }
 
 .flex {
