add tutorial to users

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-      <%= link_to image_tag("logo.png", :size => '28x28') + " Taktics", root_path, id: "logo" %>
+      <%= link_to image_tag("logo.png", :size => '28x28') + " Taktics", home_path, id: "logo" %>
 
       <nav>
       <ul class="nav navbar-nav navbar-right">
