--- a/app/views/tactics/show.html.erb
+++ b/app/views/tactics/show.html.erb
@@ -1,4 +1,10 @@
+<% unless logged_in? %>
+    <%= render 'shared/not_logged_in' %>
+<% end %>
 
+<% if logged_in? && @user.finished_tutorial%>
+
+<% end %>
 <div class="container main_background padded_10" style="min-width: 1100px">
     <div class="flex container minwidth">
         <div class="col-md-9">
