change background color and add rating

--- a/app/views/shared/_not_logged_in.html.erb
+++ b/app/views/shared/_not_logged_in.html.erb
@@ -1,5 +1,5 @@
 
-<div class="modal fade" id="myModal" role="dialog">
+<div class="modal fade" id="tutorialModal" role="dialog">
     <div class="modal-dialog">
 
         <!-- Modal content-->
@@ -27,6 +27,6 @@
 
 <script>
     $(document).ready(function() {
-        $('#myModal').modal('show');
+        $('#tutorialModal').modal('show');
     })
 </script>
