--- a/app/assets/stylesheets/tactics.scss
+++ b/app/assets/stylesheets/tactics.scss
@@ -1,8 +1,7 @@
 
 .main_background {
   border-radius: 10px;
-  background-color: white;
-  background: image-url("pattern.png");
+  background-color: #5c7885;
 }
 
 .flex {
