fix sidebar problem?

--- a/app/views/tactics/show.html.erb
+++ b/app/views/tactics/show.html.erb
@@ -12,7 +12,7 @@
             <iframe class="rounded_5" src=<%= @tactic.url%> width="750" height="576"></iframe>
         </div>
 
-        <div class="padded-sidebar center container col-md-4" style="background-color: #455A64; border-radius: 5px;">
+        <div class="padded-sidebar center container col-md-4" style="background-color: #455A64; border-radius: 5px; max-width: 400px;">
             <span class="flex padded-playinfo col-md-12 btn btn-success">
                 It is your turn to play
             </span>
