--- a/app/views/shared/_not_logged_in.html.erb
+++ b/app/views/shared/_not_logged_in.html.erb
@@ -12,10 +12,11 @@
                 <p>You may practice Taktics without logging in, but please note that your results will not
                     be recorded. This means that you may not be given tactics of the appropriate level to
                     your skill, and that your progress will not be recorded.
-
                 </p>
                <p> Enjoy!</p>
                 <p>-The Taktics Team </p>
+                <br>
+                <p>*Taktics.net still under development! Alpha slated for Jan 2, 2017</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
