--- a/app/views/shared/_timer.html.erb
+++ b/app/views/shared/_timer.html.erb
@@ -1,5 +1,5 @@
 <div class="mytimer">
-    <% if timer_status %>
+    <% if !timer_status %>
         <span id="page_timer">
             Timer: 00:00
         </span>
