--- a/app/views/tactics/show.html.erb
+++ b/app/views/tactics/show.html.erb
@@ -6,6 +6,8 @@
     <%= render 'shared/logged_in_tutorial' %>
 <% end %>
 
+
+
 <div class="container main_background padded_10" style="min-width: 1100px">
     <div class="flex container minwidth">
         <div class="col-md-9">
@@ -78,4 +80,13 @@
     </div>
 
 </div>
+
+<script>
+    $(document).one('ready', (function() {
+        var correct = <%= @moves[:correct] %>;
+        alert(<%= @moves[:correct] %>);
+
+
+    }))
+</script>
 
