--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,8 +4,6 @@
 
       <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Help", help_path %></li>
         <% if logged_in? %>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -27,7 +25,7 @@
                 Account <b class="caret"></b>
               </a>
             <ul class="dropdown-menu">
-              <li class="divider"></li>
+              <li style="border-top: 5px solid grey;" class="divider"></li>
               <li><%= link_to "Sign_up", signup_path %></li>
               <li class="divider"></li>
               <li><%= link_to "Log in", login_path %></li>
