--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,8 +3,10 @@
   <aside class="col-md-4">
     <section class="user_info">
       <h1>
-        <%= gravatar_for @user %>
+        <span style="color: white;">User Profile</span>
         <%= @user.name %>
+          <div style="height: 400px;">
+
       </h1>
     </section>
   </aside>
