--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
               <div class="alert alert-<%= message_type %>"><%= message %></div>
           <% end %>
             <%= render 'shared/sidebar' %>
-            <div class="content isOpen" style="height: 100%;">
+            <div class="content" style="height: 100%;">
                 <div style="margin-top: -10px; margin-bottom: 20px;">
                     <a class="button"></a>
                 </div>
@@ -34,6 +34,7 @@
             $('.button').on('click', function() {
                 $('.content').toggleClass('isOpen');
             });
+
         });
     </script>
     <script>
