--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -65,6 +65,19 @@ body {
   background: #2a2a2a;
 }
 
+
+.under_title {
+  margin-top: -20px;
+  font-size: 10px;
+  line-height: 30px;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #eee;
+  border-bottom: 1px solid #222;
+  background: #2a2a2a;
+}
+
 .nav li a {
   position: relative;
   display: block;
