--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -2,7 +2,10 @@
     <div class="sidebar" style="border-left: 1px solid grey;">
         <div class="title">
             Taktics
+            <div class="under_title">Coming Jan 2, 2017</div>
+
         </div>
+
         <ul class="nav">
             <% if logged_in? %>
                 <li><%= link_to "Profile", current_user %></li>
@@ -19,7 +22,7 @@
                 <li style="border-bottom: 2px solid grey;" ><%= link_to "Log in", login_path %></li>
             <% end %>
             <li>
-                <a href="/tactics/1">Taks and Tinües <sup style="font-size: 8px;">Alpha</sup></a>
+                <a href="/tactics/1">Taks and Tinües <sup style="font-size: 8px;">Coming Soon</sup></a>
             </li>
             <li>
                 <a href="/tactics/1">Taktics <sup style="font-size: 8px;">Coming Soon</sup></a></a>
