--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -95,14 +95,14 @@ body {
   left: 20px;
 }
 
-.nav li:nth-child(1) a:before { content: '\f00a'; }
-.nav li:nth-child(2) a:before { content: '\f022'; }
+.nav li:nth-child(1) a:before { content: '\f00a';}
+.nav li:nth-child(2) a:before { content: '\f022';}
 
-.nav li:nth-child(3) a:before { content: '\f0e8'; }
-.nav li:nth-child(4) a:before { content: '\f023'; }
-.nav li:nth-child(5) a:before { content: '\f0c3'; }
-.nav li:nth-child(6) a:before { content: '\f115'; }
-.nav li:nth-child(7) a:before { content: '\f085'; }
+.nav li:nth-child(3) a:before { content: '\f0e8';}
+.nav li:nth-child(4) a:before { content: '\f023';}
+.nav li:nth-child(5) a:before { content: '\f1db';}
+.nav li:nth-child(6) a:before { content: '\f06e';}
+.nav li:nth-child(7) a:before { content: '\f085';}
 .nav li:nth-child(8) a:before { content: '\f012'; left: 23px; }
 
 .nav li a:hover {
