--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapper" style="margin-left: -20px; margin-top: -50px;">
     <div class="sidebar" style="border-left: 1px solid grey;">
         <div class="title">
             Taktics
