--- a/app/views/tactics/show.html.erb
+++ b/app/views/tactics/show.html.erb
@@ -1,12 +1,9 @@
 
 
-<div class="container main_background padded_10" style="min-width: 1100px">
+<div class="container main_background padded_10" style="min-width: 1200px">
     <div class="flex container minwidth">
-        <div class="col-md-9">
-            <iframe class="rounded_5" src=<%= @tactic.url%> width="700" height="576"></iframe>
-        </div>
 
-        <div class="padded-sidebar center container col-md-4" style="background-color: #455A64; border-radius: 5px; max-width: 400px;">
+        <div class="padded-sidebar center container col-md-4" style="background-color: #455A64; border-radius: 5px; max-width: 300px;">
             <span class="flex padded-playinfo col-md-12 btn btn-success">
                 It is your turn to play
             </span>
@@ -69,6 +66,9 @@
             </div>
         </div>
 
+        <div class="col-md-9">
+            <iframe class="rounded_5" src=<%= @tactic.url%> width="750" height="576" style="margin-left: 50px;"></iframe>
+        </div>
     </div>
 
 </div>
