remove settings and statistics til thhey're done

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -27,11 +27,11 @@
             <li>
                 <a href="/tactics/1">Taktics <sup style="font-size: 8px;">Coming Soon</sup></a></a>
             </li>
-            <li>
-                <a class=>Settings</a>
-            </li>
-            <li>
-                <a>Statistics</a>
-            </li>
+            <!--<li>-->
+                <!--<a class=>Settings</a>-->
+            <!--</li>-->
+            <!--<li>-->
+                <!--<a>Statistics</a>-->
+            <!--</li>-->
 
     </div>
