--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -34,7 +34,7 @@ body {
   flex: 1;
   padding: 30px;
   background: #333;
-  box-shadow: 0 0 5px rgba(0,0,0,1);
+  border-left: 3px solid #3c3c3c;
   transform: translate3d(0,0,0);
   transition: transform .3s;
 }
