change format for homepage, change root

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -22,16 +22,21 @@
                 <li style="border-bottom: 2px solid grey;" ><%= link_to "Log in", login_path %></li>
             <% end %>
             <li>
+                <a href="/home" class=>Home</a>
+            </li>
+            <li>
                 <a href="/tactics/1">Taks and Tinües <sup style="font-size: 8px;">Coming Soon</sup></a>
             </li>
             <li>
                 <a href="/tactics/1">Taktics <sup style="font-size: 8px;">Coming Soon</sup></a></a>
             </li>
-            <!--<li>-->
-                <!--<a class=>Settings</a>-->
-            <!--</li>-->
-            <!--<li>-->
-                <!--<a>Statistics</a>-->
-            <!--</li>-->
+
+
+            <li>
+                <a>Statistics</a>
+            </li>
+            <li>
+                <a href="/about">About</a>
+            </li>
 
     </div>
