--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,21 +1,25 @@
 <% provide(:title, "About") %>
 <h1>About</h1>
-<p>
-<div>
-    <h3 class="header_font_pink">What is Tak?</h3>
-    <ul>
-        <li>Tak is a strategy game created by James Ernest and Patrick Rothfuss.</li>
-        <li>It is based off of a game of the same name in The Wise Man's Fear. </li>
-        <li>The rules of Tak can be found <a href="http://www.cheapass.com/sites/default/files/TAKBetaRules9-9.pdf" target="_blank">here.</a></li>
-        <li>An example game can be found <a href="https://www.youtube.com/watch?v=iEXkpS-Q9dI" target="_blank">here.</a></li>
-    </ul>
-    <h3 class="header_font_pink">What are Tactics?</h3>
-    <ul>
-        <li>Tactics are self contained exercises used to help improve one's skill at a game. </li>
-        <li>They are often designed to illustrate an important concept. </li>
-        <li>Over time by practicing with tactics, players can gain pattern recognition skills that will help
-            improve their game. </li>
-    </ul>
+<div class="jumbotron container main_background">
+    <h1 class="center" style="font-size: 30px;">About</h1>
+    <div class="col-md-6">
+        <h3 class="header_font_pink">What is Tak?</h3>
+        <ul>
+            <li>Tak is a strategy game created by James Ernest and Patrick Rothfuss.</li>
+            <li>It is based off of a game of the same name in The Wise Man's Fear. </li>
+            <li>The rules of Tak can be found <a href="http://www.cheapass.com/sites/default/files/TAKBetaRules9-9.pdf" target="_blank">here.</a></li>
+            <li>An example game can be found <a href="https://www.youtube.com/watch?v=iEXkpS-Q9dI" target="_blank">here.</a></li>
+        </ul>
+    </div>
+    <div>
+        <h3 class="header_font_pink">What are Tactics?</h3>
+        <ul>
+            <li>Tactics are self contained exercises used to help improve one's skill at a game. </li>
+            <li>They are often designed to illustrate an important concept. </li>
+            <li>Over time by practicing with tactics, players can gain pattern recognition skills that will help
+                improve their game. </li>
+        </ul>
+
+    </div>
 
 </div>
-</p>
