--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,29 +3,31 @@
 
 <div class="container main_background padded_10" style="min-width: 1200px">
     <h1> Welcome to Taktics! </h1>
+    <br>
 
-    <div class="col-md-6">
+    <div class="col-md-12" style="font-size: 14px;">
+        <p>
+            Welcome to Taktics.net! A website created as a gift to community of the strategy game Tak. This site is dedicated to helping Tak players improve their game.
+        </p>
+        <br>
+        <p>
+            We are currently preparing for a launch of the <span style="color: #c4c4c4;">closed alpha. </span> To do this, we are
+            extracting puzzles from a database of almost <span style="color: #C4C4C4;">70,000 Tak games </span> using AI. This is a complex process, but it is
+            an interesting problem and a fun challenge so we are happy to tackle it. We hope to launch January 2, 2017.
+        </p>
+        <br>
+
+        <br>
+        <p>
+            Click on the <span style="color: #9d0000;" title="Seriously, click it!">red bar above</span> to explore the rest of our site. You can check out our awesome UI
+            by clicking either on "Taks and Tinües", or on "Taktics".
+        </p>
+
+
+
 
     </div>
 
-    <div class="col-md-6">
-        <div>
-            <h3 class="header_font_pink">What is Tak?</h3>
-            <ul>
-                <li>Tak is a strategy game created by James Ernest and Patrick Rothfuss.</li>
-                <li>It is based off of a game of the same name in The Wise Man's Fear. </li>
-                <li>The rules of Tak can be found <a href="http://www.cheapass.com/sites/default/files/TAKBetaRules9-9.pdf" target="_blank">here.</a></li>
-                <li>An example game can be found <a href="https://www.youtube.com/watch?v=iEXkpS-Q9dI" target="_blank">here.</a></li>
-            </ul>
-            <h3 class="header_font_pink">What are Tactics?</h3>
-            <ul>
-                <li>Tactics are self contained exercises used to help improve one's skill at a game. </li>
-                <li>They are often designed to illustrate an important concept. </li>
-                <li>Over time by practicing with tactics, players can gain pattern recognition skills that will help
-                    improve their game. </li>
-            </ul>
 
-        </div>
-    </div>
 
 </div>
