--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,8 +3,13 @@
   <aside class="col-md-4">
     <section class="user_info">
       <h1>
-        <span style="color: white;">User Profile</span>
-        <%= @user.name %>
+        <span style="color: white;">User Statistics</span>
+        <br>
+          <p class="white-small">Welcome to the User Statistics page. This page will contain
+          interesting details about a user's progress as they try out different training exercises on the site. </p>
+
+          <p class="white-small">You will be able to unlock achievments, see your taktics rating, and replay puzzles you have completed in the past.   </p>
+
           <div style="height: 400px;">
 
       </h1>
