--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -33,10 +33,10 @@
 
 
             <li>
-                <a>Statistics</a>
+                <a href="/users/1">Statistics</a>
             </li>
-            <li>
-                <a href="/about">About</a>
-            </li>
+            <!--<li>-->
+                <!--<a href="/about">About</a>-->
+            <!--</li>-->
 
     </div>
