--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,7 @@
 
     <div class="col-md-12" style="font-size: 14px;">
         <p>
-            Welcome to Taktics.net! A website created as a gift to community of the strategy game Tak. This site is dedicated to helping Tak players improve their game through algorithmically generated puzzles.
+            Welcome to Taktics.net! A website created as a gift to the community of the strategy game Tak. This site is dedicated to helping Tak players improve their game through algorithmically generated puzzles.
         </p>
         <br>
         <p>
