--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -22,6 +22,10 @@
             Click on the <span style="color: #9d0000;" title="Seriously, click it!">red bar above</span> to explore the rest of our site. You can check out our awesome UI
             by clicking either on "Taks and Tinües", or on "Taktics".
         </p>
+        <br>
+        <p>
+            For any questions, please feel free to contact <span style="color: #C4C4C4;"> weissp68@stanford.edu </span>
+        </p>
 
 
 
