add styling to launch date

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,7 +13,7 @@
         <p>
             We are currently preparing for a launch of the <span style="color: #c4c4c4;">closed alpha. </span> To do this, we are
             extracting puzzles from a database of almost <span style="color: #C4C4C4;">70,000 Tak games </span> using AI. This is a complex process, but it is
-            an interesting problem and a fun challenge so we are happy to tackle it. We hope to launch January 2, 2017.
+            an interesting problem and a fun challenge so we are happy to tackle it. We hope to launch <span style="color: #c4c4c4"> January 2, 2017. </span>
         </p>
         <br>
 
